--- a/landing_page.css
+++ b/landing_page.css
@@ -17,7 +17,8 @@
         margin: 0;
         background-image: url('wall2.jpg');
         background-repeat: no-repeat;
-        background-size: auto;
+        background-size: cover;
+        height: 2000px;
     }
 
     header {
@@ -28,7 +29,9 @@
 
     nav {
         background-color: rgba(17, 17, 17, 0.5);
-
+        position: sticky;
+        position: fixed;
+        width: 100%; 
     }
 
     #title {
@@ -51,3 +54,36 @@
         font-weight: 200;
         text-transform: uppercase;
     }
+ #image{
+     float: left;
+     width: 50%;
+    
+ }
+
+button{
+    padding: 10px 25px;
+    border-radius: 40px;
+    outline: none;
+    border: none;
+    background-color: rgb(255, 145, 0);
+    color: white;
+    font-size: 30px;
+}
+
+ section{
+     margin-top: 100px;
+     text-align: center;
+ }
+
+    @media screen and (max-width:1000px){
+        #desc{
+            float: none;
+            width: 100%;
+        }
+        #image{
+            width: 100%;
+        }
+    }
+.row{
+    background-color: turquoise;
+}
